# Orquestacion-de-contenedores-en-ambientes-IoT

./: edge-crd.yaml  test-ed.yaml
API/: API_de_Kubernetes.md  rbac-edge.yaml
CL_Commands/: Kubernetes_Cluster_VMs.md
edge-operator/: Cargo.toml
edge-operator/src/: main.rs
