[package]
name = "edge-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
kube = { version = "0.89", features = ["runtime", "derive", "reflect"] }
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
k8s-openapi = { version = "0.18", default-features = false, features = ["v1_26"] }
futures = "0.3"