[package]
name = "edge-operator"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
kube = { version = "0.87.2", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }